tests/ui/invalid_pymethod_names.stderr
error: name not allowed with this method type
  --> $DIR/invalid_pymethod_names.rs:10:5
   |
10 |     #[name = "num"]
   |     ^

error: #[name] can not be specified multiple times
  --> $DIR/invalid_pymethod_names.rs:18:5
   |
18 |     #[name = "bar"]
   |     ^

error: name not allowed with this method type
  --> $DIR/invalid_pymethod_names.rs:24:5
   |
24 |     #[name = "makenew"]
   |     ^
